<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ToggleButton
            android:id="@+id/toggle_device_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_device_admin"
            android:textOff="@string/device_admin_disabled"
            android:textOn="@string/device_admin_enabled" />

        <Button
            android:id="@+id/button_lock_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/lock_device" />

        <Button
            android:id="@+id/button_reset_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/reset_device" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>